--- a/index.html
+++ b/index.html
@@ -8,62 +8,78 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
-        :root { --main-color: #ffd700; --side-pos: left; }
-        body { background: #000; color: #fff; font-family: sans-serif; margin: 0; display: flex; height: 100vh; overflow: hidden; }
+        :root { --main: #ffd700; --bg: #000; --side-w: 200px; }
+        body { background: var(--bg); color: #fff; font-family: sans-serif; margin: 0; display: flex; height: 100vh; overflow: hidden; }
 
-        /* لوحة التحكم السريعة (تظهر لك فقط) */
-        #settings-box { 
-            position: fixed; top: 50px; right: 10px; background: #222; border: 1px solid var(--main-color);
-            padding: 15px; border-radius: 10px; z-index: 2000; display: none; box-shadow: 0 0 20px #000;
+        /* لوحة التحكم المخفية */
+        #master-panel { 
+            position: fixed; top: 10%; left: 10%; right: 10%; bottom: 10%; 
+            background: rgba(15,15,15,0.95); border: 2px solid var(--main); 
+            z-index: 9999; border-radius: 20px; padding: 20px; display: none; overflow-y: auto;
+            box-shadow: 0 0 50px var(--main);
         }
 
-        /* قائمة المتصلين المتغيرة المكان */
+        /* قائمة المتصلين المرنة */
         #sidebar { 
-            width: 200px; background: rgba(10,10,10,0.95); border: 1px solid var(--main-color);
-            position: fixed; top: 0; bottom: 0; z-index: 1000; transition: 0.5s;
+            width: var(--side-w); background: #0a0a0a; border: 1px solid var(--main);
+            position: relative; transition: 0.5s; display: flex; flex-direction: column;
         }
-        .side-left { left: 0; border-radius: 0 15px 15px 0; }
-        .side-right { right: 0; border-radius: 15px 0 0 15px; }
 
-        .main-chat { flex: 1; display: flex; flex-direction: column; width: 100%; transition: 0.5s; }
-        #chat-box { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 10px; }
+        .main-chat { flex: 1; display: flex; flex-direction: column; background: #000; }
+        #chat-box { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
         
-        .msg { padding: 12px; border-radius: 15px; max-width: 70%; background: #1a1a1a; border: 1px solid #333; }
-        .msg.me { align-self: flex-end; border-color: var(--main-color); }
+        /* الرسائل */
+        .msg { padding: 10px; border-radius: 12px; max-width: 80%; background: #111; border: 1px solid #222; position: relative; }
+        .msg.me { align-self: flex-end; border-color: var(--main); }
+        .del-msg { color: red; cursor: pointer; float: left; font-weight: bold; display: none; }
 
-        .btn-tool { background: var(--main-color); color: #000; border: none; padding: 10px; border-radius: 5px; cursor: pointer; font-weight: bold; margin-bottom: 5px; width: 100%; }
+        /* أزرار التحكم */
+        .admin-only { display: none; }
+        .control-btn { background: var(--main); color: #000; border: none; padding: 10px; margin: 5px; border-radius: 8px; cursor: pointer; font-weight: bold; width: 150px; }
+        .toggle-gear { font-size: 24px; cursor: pointer; background: none; border: none; color: var(--main); padding: 10px; }
     </style>
 </head>
 <body>
 
-    <button id="admin-gear" onclick="toggleSettings()" style="position: fixed; top: 10px; left: 10px; z-index: 2001; background:none; border:none; font-size:25px; cursor:pointer;">⚙️</button>
-
-    <div id="settings-box">
-        <h4 style="margin:0 0 10px 0; color:var(--main-color)">لوحة الترتيب 🛠️</h4>
-        <button class="btn-tool" onclick="changePos('left')">نقل لليسار ⬅️</button>
-        <button class="btn-tool" onclick="changePos('right')">نقل لليمن ➡️</button>
-        <button class="btn-tool" onclick="changeColor()">تغيير لون المملكة 🎨</button>
-        <button class="btn-tool" style="background:red; color:white;" onclick="toggleSettings()">إغلاق</button>
+    <div id="sidebar">
+        <h3 style="text-align:center; color:var(--main);">المتصلون 🇮🇶</h3>
+        <div id="online-list" style="padding:10px;"></div>
     </div>
 
-    <div id="sidebar" class="side-left">
-        <h3 style="text-align:center; color:var(--main-color);">المتصلون 🇮🇶</h3>
-        <div id="user-list-items" style="padding:10px;"></div>
-    </div>
-
-    <div class="main-chat" id="main-chat">
-        <div style="background:#111; padding:15px; text-align:center; border-bottom:1px solid #222;">
-            <h2 id="title" style="margin:0; color:var(--main-color);">مملكة علوش 👑</h2>
+    <div class="main-chat">
+        <div style="background:#111; display:flex; justify-content:space-between; align-items:center; padding:5px 15px; border-bottom:1px solid #222;">
+            <button class="admin-only toggle-gear" onclick="togglePanel()">⚙️</button>
+            <h2 style="margin:0; color:var(--main); font-size:18px;">مملكة علوش 👑</h2>
+            <div id="clock" style="font-size:12px; color:gray;"></div>
         </div>
+
         <div id="chat-box"></div>
+
         <div style="padding:15px; background:#111; display:flex; gap:10px;">
-            <input type="text" id="mInp" placeholder="تحدث..." style="flex:1; background:#000; color:#fff; border:1px solid #333; padding:10px; border-radius:10px;">
-            <button onclick="sendMsg()" style="background:var(--main-color); border:none; padding:10px 20px; border-radius:10px; font-weight:bold;">إرسال</button>
+            <button onclick="document.getElementById('fInp').click()" style="background:none; border:none; font-size:20px; cursor:pointer;">📎</button>
+            <input type="file" id="fInp" accept="image/*" style="display:none" onchange="uploadFile(this)">
+            <input type="text" id="mInp" placeholder="تحدث مع الإمبراطور..." style="flex:1; background:#000; color:#fff; border:1px solid #333; padding:10px; border-radius:20px; outline:none;">
+            <button onclick="send()" style="background:var(--main); border:none; padding:10px 20px; border-radius:20px; font-weight:bold; cursor:pointer;">إرسال</button>
         </div>
+    </div>
+
+    <div id="master-panel">
+        <h2 style="color:var(--main); text-align:center;">🛠️ لوحة تحكم الإمبراطور</h2>
+        <hr border="1" color="#333">
+        <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:10px; margin-top:20px;">
+            <button class="control-btn" onclick="setSide('right')">القائمة يمين ➡️</button>
+            <button class="control-btn" onclick="setSide('left')">القائمة يسار ⬅️</button>
+            <button class="control-btn" onclick="hideElement('sidebar')">حذف القائمة 🗑️</button>
+            <button class="control-btn" onclick="location.reload()">إظهار القائمة 🔄</button>
+            <button class="control-btn" onclick="changeTheme('#ff0000')">ثيم أحمر 🔴</button>
+            <button class="control-btn" onclick="changeTheme('#ffd700')">ثيم ذهبي 🟡</button>
+            <button class="control-btn" onclick="changeTheme('#00f2ff')">ثيم نيون 🔵</button>
+            <button class="control-btn" style="background:red; color:white;" onclick="clearAll()">مسح الشات 🧨</button>
+        </div>
+        <button onclick="togglePanel()" style="display:block; margin:30px auto; padding:10px 40px; border-radius:10px; background:#fff; font-weight:bold;">إغلاق اللوحة</button>
     </div>
 
 <script>
-    // إعدادات Firebase الخاصة بك
     const config = {
         apiKey: "AIzaSyDpjqkb4U-RF71r_Zv3tHAV9wWWe2L3pEQ", 
         authDomain: "masterchat-f2da9.firebaseapp.com",
@@ -74,63 +90,85 @@
     const auth = firebase.auth();
     const db = firebase.database();
 
-    function toggleSettings() {
-        const box = document.getElementById('settings-box');
-        box.style.display = box.style.display === 'block' ? 'none' : 'block';
+    function togglePanel() {
+        const p = document.getElementById('master-panel');
+        p.style.display = p.style.display === 'block' ? 'none' : 'block';
     }
 
-    // وظيفة تغيير المكان من داخل الشات
-    function changePos(pos) {
-        const side = document.getElementById('sidebar');
-        if(pos === 'left') {
-            side.className = 'side-left';
-        } else {
-            side.className = 'side-right';
-        }
+    function setSide(dir) {
+        document.body.style.flexDirection = dir === 'right' ? 'row-reverse' : 'row';
     }
 
-    function changeColor() {
-        const colors = ['#ffd700', '#ff0000', '#00f2ff', '#ff00ff', '#00ff00'];
-        const randomColor = colors[Math.floor(Math.random() * colors.length)];
-        document.documentElement.style.setProperty('--main-color', randomColor);
-    }
+    function hideElement(id) { document.getElementById(id).style.display = 'none'; }
+
+    function changeTheme(color) { document.documentElement.style.setProperty('--main', color); }
+
+    function clearAll() { if(confirm("حذف كل الرسائل؟")) db.ref('msgs').remove(); }
 
     auth.onAuthStateChanged(user => {
         if (user) {
-            const myName = user.email === "rgrghh77@gmail.com" ? "علوش 👑" : user.email.split('@')[0];
-            db.ref('online/' + user.uid).set({ n: myName }).onDisconnect().remove();
-            loadChat();
+            const isMe = user.email === "rgrghh77@gmail.com";
+            if(isMe) document.querySelectorAll('.admin-only').forEach(el => el.style.display = 'block');
+            const name = isMe ? "علوش 👑" : user.email.split('@')[0];
+            db.ref('online/' + user.uid).set({ n: name }).onDisconnect().remove();
+            loadChat(isMe);
             loadUsers();
-            if(user.email !== "rgrghh77@gmail.com") document.getElementById('admin-gear').style.display = 'none';
         } else { window.location.href = "index.html"; }
     });
 
-    function sendMsg() {
+    function send() {
         const i = document.getElementById('mInp');
         if(i.value.trim()) {
-            db.ref('msgs').push({ u: auth.currentUser.email === "rgrghh77@gmail.com" ? "علوش 👑" : auth.currentUser.email.split('@')[0], t: i.value });
+            db.ref('msgs').push({
+                u: auth.currentUser.email === "rgrghh77@gmail.com" ? "علوش 👑" : auth.currentUser.email.split('@')[0],
+                t: i.value,
+                a: auth.currentUser.email === "rgrghh77@gmail.com",
+                type: 'text'
+            });
             i.value = '';
         }
     }
 
-    function loadChat() {
-        db.ref('msgs').limitToLast(20).on('child_added', snap => {
+    function uploadFile(input) {
+        if (input.files && input.files[0]) {
+            const r = new FileReader();
+            r.onload = e => {
+                db.ref('msgs').push({
+                    u: auth.currentUser.email === "rgrghh77@gmail.com" ? "علوش 👑" : auth.currentUser.email.split('@')[0],
+                    t: e.target.result,
+                    type: 'image'
+                });
+            };
+            r.readAsDataURL(input.files[0]);
+        }
+    }
+
+    function loadChat(isMe) {
+        db.ref('msgs').on('child_added', snap => {
             const d = snap.val();
+            const id = snap.key;
             const div = document.createElement('div');
-            div.className = `msg ${d.u.includes('علوش') ? 'me' : 'other'}`;
-            div.innerHTML = `<small style="color:var(--main-color)">${d.u}</small><br>${d.t}`;
+            div.className = `msg ${d.a ? 'me' : 'other'}`;
+            const delBtn = isMe ? `<span class="del-msg" style="display:inline" onclick="deleteMsg('${id}')">×</span>` : '';
+            const content = d.type === 'image' ? `<img src="${d.t}" style="width:100%; border-radius:8px;">` : d.t;
+            div.innerHTML = `${delBtn}<b style="color:var(--main); font-size:11px; display:block;">${d.u}</b>${content}`;
             document.getElementById('chat-box').appendChild(div);
             document.getElementById('chat-box').scrollTop = document.getElementById('chat-box').scrollHeight;
         });
+        db.ref('msgs').on('child_removed', () => location.reload());
     }
+
+    function deleteMsg(id) { if(confirm("حذف هذه الرسالة؟")) db.ref('msgs').child(id).remove(); }
 
     function loadUsers() {
         db.ref('online').on('value', snap => {
-            const uBox = document.getElementById('user-list-items');
+            const uBox = document.getElementById('online-list');
             uBox.innerHTML = '';
-            snap.forEach(c => { uBox.innerHTML += `<div style="margin-bottom:10px;">🟢 ${c.val().n} 🇮🇶</div>`; });
+            snap.forEach(c => { uBox.innerHTML += `<div style="margin-bottom:8px; font-size:13px;">🟢 ${c.val().n} 🇮🇶</div>`; });
         });
     }
+
+    setInterval(() => { document.getElementById('clock').innerText = new Date().toLocaleTimeString(); }, 1000);
 </script>
 </body>
 </html>
