--- a/index.html
+++ b/index.html
@@ -3,99 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مملكة علوش - النسخة العظمى 👑</title>
+    <title>مملكة علوش - النسخة المفهومة 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
-        :root { --main: #ffd700; --bg: #000; --side: 260px; }
-        body { background: var(--bg); color: #fff; font-family: 'Segoe UI', sans-serif; margin: 0; height: 100vh; display: flex; overflow: hidden; }
+        :root { --main: #ffd700; --bg: #000; --side-w: 250px; }
+        body { background: var(--bg); color: #fff; font-family: 'Segoe UI', sans-serif; margin: 0; overflow: hidden; display: flex; }
 
         /* الأجنحة الجانبية */
-        .side-panel { width: var(--side); background: #0a0a0a; position: fixed; height: 100%; transition: 0.4s; z-index: 1000; border: 1px solid #222; overflow-y: auto; }
-        #side-right { right: calc(var(--side) * -1); border-left: 2px solid var(--main); }
-        #side-left { left: calc(var(--side) * -1); border-right: 2px solid var(--main); }
-        .side-panel.open { right: 0 !important; left: 0 !important; }
+        .side { width: var(--side-w); height: 100vh; background: #0a0a0a; position: fixed; transition: 0.3s; z-index: 1000; border: 1px solid #222; }
+        #side-right { right: -250px; border-left: 2px solid var(--main); }
+        #side-left { left: -250px; border-right: 2px solid var(--main); }
+        .side.open { right: 0 !important; left: 0 !important; }
 
         /* المحتوى الرئيسي */
-        #main-chat { flex: 1; display: flex; flex-direction: column; width: 100%; transition: 0.3s; }
+        #main-view { flex: 1; height: 100vh; display: flex; flex-direction: column; position: relative; }
 
-        /* البروفايل داخل الجانب */
-        .profile-card { padding: 15px; text-align: center; background: linear-gradient(to bottom, #111, #000); }
-        .cover-img { width: 100%; height: 100px; background: #222; border-radius: 10px; object-fit: cover; }
-        .avatar-img { width: 80px; height: 80px; border-radius: 50%; border: 3px solid var(--main); margin-top: -40px; background: #000; }
-
-        /* اليوتيوب العائم */
-        #yt-float { position: fixed; bottom: 80px; right: 20px; width: 180px; height: 120px; background: #000; border: 2px solid var(--main); border-radius: 10px; z-index: 500; display: none; overflow: hidden; }
-        .yt-controls { position: absolute; top: 0; background: rgba(0,0,0,0.7); width: 100%; display: flex; justify-content: space-around; font-size: 12px; }
+        /* اليوتيوب المربع المستقل */
+        #yt-player-box { position: absolute; top: 60px; left: 10px; width: 150px; height: 100px; background: #000; border: 1px solid var(--main); z-index: 500; display: none; border-radius: 8px; overflow: hidden; }
+        .yt-btns { background: rgba(0,0,0,0.8); display: flex; justify-content: space-around; font-size: 10px; cursor: pointer; }
 
         /* الشات */
-        #messages { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; }
-        .msg-row { display: flex; align-items: flex-end; gap: 10px; }
+        #chat-window { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
+        .msg-row { display: flex; gap: 10px; align-items: flex-start; }
         .msg-row.me { flex-direction: row-reverse; }
-        .user-mini-img { width: 35px; height: 35px; border-radius: 50%; border: 1px solid var(--main); cursor: pointer; }
-        .bubble { padding: 10px 15px; border-radius: 15px; max-width: 70%; background: #111; border: 1px solid #222; }
-        .me .bubble { background: #1a1a1a; border-color: var(--main); }
+        .u-img { width: 40px; height: 40px; border-radius: 50%; border: 1px solid var(--main); cursor: pointer; }
+        .txt { background: #111; padding: 10px; border-radius: 12px; max-width: 70%; border: 1px solid #222; }
+        .me .txt { border-color: var(--main); background: #1a1a1a; }
 
-        /* الإيموجيات */
-        #emoji-box { display: none; background: #111; padding: 10px; grid-template-columns: repeat(6, 1fr); gap: 10px; max-height: 200px; overflow-y: auto; border-top: 1px solid var(--main); }
-        .emoji { font-size: 25px; cursor: pointer; text-align: center; }
+        /* البروفايل */
+        .prof-header { height: 80px; background: #333; position: relative; border-radius: 5px; }
+        .prof-av { width: 60px; height: 60px; border-radius: 50%; border: 2px solid var(--main); position: absolute; bottom: -30px; left: 50%; transform: translateX(-50%); background: #000; }
 
-        /* أزرار الإدخال */
-        .input-bar { padding: 10px; background: #050505; display: flex; gap: 8px; align-items: center; border-top: 1px solid #222; }
-        input[type="text"] { flex: 1; background: #111; border: 1px solid #333; color: #fff; padding: 10px; border-radius: 20px; outline: none; }
-        
-        .nav-btn { background: none; border: none; color: var(--main); font-size: 20px; cursor: pointer; }
+        /* الإدخال */
+        .bar { padding: 10px; background: #050505; display: flex; gap: 5px; border-top: 1px solid #222; align-items: center; }
+        input { flex: 1; background: #111; border: 1px solid #333; color: #fff; padding: 10px; border-radius: 20px; outline: none; }
+        .btn-icon { background: none; border: none; font-size: 20px; cursor: pointer; color: var(--main); }
+
+        #emoji-shelf { display: none; background: #111; padding: 10px; grid-template-columns: repeat(6, 1fr); border-top: 1px solid var(--main); }
     </style>
 </head>
-<body onclick="closePanels(event)">
+<body>
 
-    <div id="side-right" class="side-panel">
-        <div style="padding:15px; color:var(--main); text-align:center;">👥 المتصلون</div>
-        <div id="user-list"></div>
-    </div>
-
-    <div id="side-left" class="side-panel">
-        <div class="profile-card" id="my-profile-ui">
-            <img src="" class="cover-img" id="p-cover">
-            <img src="" class="avatar-img" id="p-avatar">
-            <h3 id="p-name" style="margin:10px 0 5px;">الإمبراطور</h3>
-            <p id="p-bio" style="font-size:12px; color:#888;">وصف المملكة</p>
-            <button class="nav-btn" onclick="editProfile()" style="font-size:12px;">⚙️ تعديل البروفايل</button>
+    <div id="side-right" class="side">
+        <div style="padding:15px; text-align:center; color:var(--main); border-bottom:1px solid #222;">الملف الشخصي & المتصلون</div>
+        <div id="my-profile" style="padding:10px; text-align:center;">
+            <div class="prof-header" id="p-cover-bg">
+                <img src="https://via.placeholder.com/60" class="prof-av" id="p-avatar-img">
+            </div>
+            <h4 id="p-name-ui" style="margin-top:35px;">تحميل...</h4>
+            <button onclick="editProf()" style="font-size:10px;">⚙️ تعديل البروفايل</button>
         </div>
         <hr style="border:0; border-top:1px solid #222;">
-        <div style="padding:15px;">
-            <button class="nav-btn" style="width:100%; text-align:right;" onclick="toggleYT()">📺 يوتيوب</button>
-            <button class="nav-btn" style="width:100%; text-align:right; margin-top:10px;">🎵 موسيقى البروفايل</button>
-        </div>
+        <div id="user-list" style="padding:10px;"></div>
     </div>
 
-    <main id="main-chat">
+    <div id="side-left" class="side">
+        <div style="padding:15px; color:var(--main);">إعدادات الشات</div>
+        <button onclick="toggleYT()" style="width:100%; padding:10px; background:none; color:#fff; border:none; text-align:right;">📺 تشغيل يوتيوب</button>
+        <button onclick="db.ref('msgs').remove()" style="width:100%; padding:10px; background:none; color:red; border:none; text-align:right;">🧨 تصفير الشات</button>
+    </div>
+
+    <div id="main-view">
         <div style="padding:10px; background:#0a0a0a; display:flex; justify-content:space-between; border-bottom:1px solid #222;">
-            <button class="nav-btn" onclick="openSide('left', event)">👤</button>
-            <span style="color:var(--main); font-weight:bold;">مملكة علوش 👑</span>
-            <button class="nav-btn" onclick="openSide('right', event)">👥</button>
+            <button class="btn-icon" onclick="openS('left')">⚙️</button>
+            <span style="color:var(--main); font-weight:bold;">مملكة علوش</span>
+            <button class="btn-icon" onclick="openS('right')">👤</button>
         </div>
 
-        <div id="messages"></div>
-
-        <div id="yt-float">
-            <div class="yt-controls">
-                <span onclick="ytMode('audio')">🔇 صوت</span>
-                <span onclick="ytMode('video')">📺 فيديو</span>
-                <span onclick="document.getElementById('yt-float').style.display='none'">X</span>
+        <div id="yt-player-box">
+            <div class="yt-btns">
+                <span onclick="ytV(false)">➖ صوت</span>
+                <span onclick="ytV(true)">➕ فيديو</span>
+                <span onclick="this.parentElement.parentElement.style.display='none'">X</span>
             </div>
-            <div id="yt-player" style="width:100%; height:100%;"></div>
+            <div id="yt-frame" style="width:100%; height:100%;"></div>
         </div>
 
-        <div id="emoji-box"></div>
+        <div id="chat-window" onclick="closeAll()"></div>
 
-        <div class="input-bar">
-            <button class="nav-btn" onclick="toggleEmojis(event)">😊</button>
-            <input type="text" id="mInp" placeholder="اكتب شيئاً...">
-            <button class="nav-btn" onclick="sendMsg()">🚀</button>
+        <div id="emoji-shelf"></div>
+
+        <div class="bar">
+            <button class="btn-icon" onclick="showE()">😊</button>
+            <input type="text" id="mInp" placeholder="تحدث يا ملك...">
+            <button class="btn-icon" onclick="send()">🚀</button>
         </div>
-    </main>
+    </div>
 
 <script>
     const firebaseConfig = {
@@ -107,94 +102,74 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
     const auth = firebase.auth();
-    let myID, myData = {};
+    let myID, myD = {};
 
-    // --- نظام الجوانب ---
-    function openSide(dir, e) {
-        e.stopPropagation();
-        document.getElementById('side-'+dir).classList.add('open');
-    }
-    function closePanels(e) {
-        document.getElementById('side-right').classList.remove('open');
-        document.getElementById('side-left').classList.remove('open');
-        document.getElementById('emoji-box').style.display = 'none';
-    }
-
-    // --- البروفايل ---
-    auth.onAuthStateChanged(user => {
-        if(user) {
-            myID = user.uid;
-            db.ref('users/'+myID).on('value', snap => {
-                myData = snap.val() || { n: "عضو جديد", av: "https://via.placeholder.com/80", cv: "https://via.placeholder.com/300x100" };
-                document.getElementById('p-name').innerText = myData.n;
-                document.getElementById('p-avatar').src = myData.av;
-                document.getElementById('p-cover').src = myData.cv;
+    auth.onAuthStateChanged(u => {
+        if(u) {
+            myID = u.uid;
+            db.ref('users/'+myID).on('value', s => {
+                myD = s.val() || { n: u.email.split('@')[0], av: "https://via.placeholder.com/40" };
+                document.getElementById('p-name-ui').innerText = myD.n;
+                document.getElementById('p-avatar-img').src = myD.av;
             });
-            db.ref('status/'+myID).set({ n: user.email.split('@')[0] });
-            loadSystem();
+            db.ref('status/'+myID).set({ n: myD.n });
+            db.ref('status/'+myID).onDisconnect().remove();
+            load();
         }
     });
 
-    function editProfile() {
-        const n = prompt("الاسم الجديد:", myData.n);
-        const av = prompt("رابط الصورة الشخصية:", myData.av);
-        const cv = prompt("رابط صورة الغلاف:", myData.cv);
-        const mu = prompt("رابط موسيقى MP3 لبروفايلك:");
-        db.ref('users/'+myID).update({ n, av, cv, mu });
+    function openS(d) { event.stopPropagation(); document.getElementById('side-'+d).classList.add('open'); }
+    function closeAll() { 
+        document.getElementById('side-right').classList.remove('open'); 
+        document.getElementById('side-left').classList.remove('open');
+        document.getElementById('emoji-shelf').style.display = 'none';
     }
 
-    // --- الشات والرسائل ---
-    function sendMsg() {
+    function editProf() {
+        const n = prompt("اسمك الجديد:", myD.n);
+        const av = prompt("رابط صورتك:", myD.av);
+        const mu = prompt("رابط موسيقى MP3 لبروفايلك:");
+        db.ref('users/'+myID).update({ n, av, mu });
+    }
+
+    function send() {
         const t = document.getElementById('mInp').value;
         if(!t) return;
-        db.ref('msgs').push({ uid: myID, n: myData.n, av: myData.av, t: t });
+        db.ref('msgs').push({ uid: myID, n: myD.n, av: myD.av, t: t });
         document.getElementById('mInp').value = '';
     }
 
-    function loadSystem() {
-        // تحميل الرسائل بصورة الشخص
-        db.ref('msgs').limitToLast(20).on('child_added', snap => {
-            const d = snap.val();
+    function load() {
+        db.ref('msgs').limitToLast(20).on('child_added', s => {
+            const d = s.val();
             const isMe = d.uid === myID;
             const div = document.createElement('div');
             div.className = `msg-row ${isMe ? 'me' : ''}`;
-            div.innerHTML = `
-                <img src="${d.av}" class="user-mini-img" onclick="viewUser('${d.uid}')">
-                <div class="bubble">
-                    <small style="color:var(--main); display:block; font-size:10px;">${d.n}</small>
-                    ${d.t}
-                </div>
-            `;
-            document.getElementById('messages').appendChild(div);
-            document.getElementById('messages').scrollTop = document.getElementById('messages').scrollHeight;
+            div.innerHTML = `<img src="${d.av}" class="u-img"><div class="txt"><small style="color:var(--main); display:block; font-size:10px;">${d.n}</small>${d.t}</div>`;
+            document.getElementById('chat-window').appendChild(div);
+            document.getElementById('chat-window').scrollTop = document.getElementById('chat-window').scrollHeight;
         });
 
-        // شحن الإيموجيات
-        const ems = ['😂','🔥','👑','✨','💯','💎','🌹','💙','👻','🚀','🧿','🇮🇶','🤝','❤️','👌','😎','🤔','⚡'];
-        const box = document.getElementById('emoji-box');
-        ems.forEach(e => {
-            box.innerHTML += `<span class="emoji" onclick="addE('${e}')">${e}</span>`;
-        });
+        const ems = ['😂','🔥','👑','✨','💯','💎','🌹','💙','🚀','🧿','🇮🇶','🤝','❤️','👌','😎','🤔','⚡','🎉','💪'];
+        ems.forEach(e => { document.getElementById('emoji-shelf').innerHTML += `<span style="cursor:pointer; font-size:25px;" onclick="addE('${e}')">${e}</span>`; });
     }
 
     function addE(e) { document.getElementById('mInp').value += e; }
-    function toggleEmojis(e) { e.stopPropagation(); document.getElementById('emoji-box').style.display = 'grid'; }
+    function showE() { const s = document.getElementById('emoji-shelf'); s.style.display = s.style.display === 'grid' ? 'none' : 'grid'; }
 
-    // --- اليوتيوب العائم ---
     function toggleYT() {
-        const id = prompt("أدخل كود الفيديو (مثلاً: dQw4w9WgXcQ):");
-        if(id) db.ref('global_yt').set({ id: id, mode: 'video' });
+        const id = prompt("كود فيديو يوتيوب:");
+        if(id) db.ref('yt').set({ id, v: true });
     }
-
-    db.ref('global_yt').on('value', snap => {
-        const v = snap.val();
-        if(v) {
-            document.getElementById('yt-float').style.display = 'block';
-            document.getElementById('yt-player').innerHTML = `<iframe width="100%" height="100%" src="https://www.youtube.com/embed/${v.id}?autoplay=1&controls=${v.mode==='video'?1:0}" frameborder="0"></iframe>`;
+    db.ref('yt').on('value', s => {
+        const y = s.val();
+        if(y) {
+            const b = document.getElementById('yt-player-box');
+            b.style.display = 'block';
+            document.getElementById('yt-frame').innerHTML = `<iframe width="100%" height="100%" src="https://www.youtube.com/embed/${y.id}?autoplay=1&controls=${y.v?1:0}" frameborder="0"></iframe>`;
         }
     });
-
-    function ytMode(m) { db.ref('global_yt/mode').set(m); }
+    function ytV(v) { db.ref('yt/v').set(v); }
 </script>
 </body>
 </html>
